# simulacrum

./: CMakeLists.txt  COPYING  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  simulacrum-cli.bash-completion  simulacrum-qt.pro  simulacrum-tx.bash-completion  simulacrumd.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  rules  simulacrum-qt.desktop  simulacrum-qt.install  simulacrum-qt.lintian-overrides  simulacrum-qt.manpages  simulacrum-qt.protocol  simulacrumd.bash-completion  simulacrumd.examples  simulacrumd.install  simulacrumd.lintian-overrides  simulacrumd.manpages  simulacrumd.postinst  simulacrumd.postrm  simulacrumd.service  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  org.simulacrum.simulacrumd.plist  simulacrumd.conf  simulacrumd.init  (+3 more)
depends/: README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
masternode-install/: README.md  masternode-install.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  concurrentqueue.h  core_io.h  core_read.cpp  (+103 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  paymentrequestplus.cpp  paymentrequestplus.h  (+36 more)
src/qt/forms/: addressbookpage.ui  blockexplorer.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: simulacrum_bg.ts  simulacrum_ca.ts  simulacrum_cs.ts  simulacrum_da.ts  simulacrum_de.ts  simulacrum_en.ts  simulacrum_en_GB.ts  simulacrum_en_US.ts  simulacrum_eo.ts  simulacrum_es.ts  simulacrum_es_ES.ts  simulacrum_fi.ts  simulacrum_fr_FR.ts  simulacrum_hi_IN.ts  simulacrum_hr.ts  simulacrum_hr_HR.ts  simulacrum_it.ts  simulacrum_ja.ts  simulacrum_ko_KR.ts  simulacrum_lt_LT.ts  simulacrum_nl.ts  simulacrum_pl.ts  simulacrum_pt.ts  simulacrum_pt_BR.ts  simulacrum_ro_RO.ts  simulacrum_ru.ts  simulacrum_sk.ts  simulacrum_sv.ts  simulacrum_tr.ts  simulacrum_uk.ts  simulacrum_vi.ts  simulacrum_zh_CN.ts  simulacrum_zh_TW.ts
src/qt/res/: simulacrum-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/simulacrum/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  coincontrolpivwidget.cpp  coincontrolpivwidget.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  denomgenerationdialog.cpp  denomgenerationdialog.h  expandablebutton.cpp  expandablebutton.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  (+59 more)
src/qt/simulacrum/forms/: addresseswidget.ui  coincontrolpivwidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  mnrow.ui  navmenuwidget.ui  privacywidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendconfirmdialog.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/simulacrum/res/css/: style_dark.css  style_light.css
src/qt/simulacrum/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisenddialog.h  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/simulacrum/settings/forms/: settingsfaqwidget.ui  settingswidget.ui
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
test/: README.md
wallet-compile/: compile-setup.sh
(+229 files in other folders)
